@@ -252,7 +252,23 @@
                 return true;
             });
 
+	    tabs.focus(function(ev){
+		$(this).addClass('focus');
+	    });
+
+	    tabs.blur(function(ev){
+		$(this).removeClass('focus');
+	    })
+
+	    tabs.keyup(function(ev){
+		if( ev.keyCode == $.ui.keyCode.ENTER ) {
+		    var _i = tabs.index(this);
+		    _cms_activateTab(_i);
+		}
+	    });
+
             // intialize active tab
+	    tabs.attr('tabindex','0');
             if (tabs.filter('.active').mousedown().length === 0) {
                 _cms_activateTab(0);
             }
