@@ -3,9 +3,11 @@ Version 2.2
 Core - General
 - Implement new database abstraction library that is compatible with (functionality wise) but improves apon adodb-lite
 - Implement protocol-less URL's in the config
+- page tabs are now focussable (you can tab through page tabs and use enter to select one).
 
 DesignManager
 - Implement sorting in edit design.
+
 
 Version 2.1.2 - Andros Town
 ----------------------------------
